[package]
name = "bepitone_discord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.11"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
hyper = "0.14.23"
serde = "1.0.152"
serde_json = "1.0.91"
rusqlite = { version = "0.28.0", features = ["bundled"] }
png = "0.17.7"
futures = "0.3.25"
